# rag_issue_triage

./: .env.example  .env.sandbox  .gitignore  README.md  logging_utils.py  pyproject.toml  requirements.txt  sandbox_plan.md
.cloudflared/: config.yml
.github/workflows/: ci.yml
.ops_archive/: Dockerfile.worker  docker-compose.yml
api/: __init__.py  main.py  schemas.py
api/clients/: __init__.py  github.py  jira.py
api/http/: __init__.py  viewer.py
api/sandbox/: __init__.py  bootstrap.py
api/services/: __init__.py  embeddings.py  generate_deterministic_sample.py  ingest.py  paraphrase_engine.py  rerank.py  retrieve.py  sample_config.py  seeding.py  skeleton_config.yaml  triage.py
api/utils/: __init__.py
api/webhooks/: __init__.py  github.py  jira.py
custom_logger/: logger.py
db/: init.sql  migrate.sql
db/sandbox/: github_issues.ndjson  jira_issues.ndjson
db/synth_data/: github_issues.ndjson  jira_issues.ndjson
eval/: duplicates_eval.py
logging/: logger.py
ops/: Dockerfile.api  Dockerfile.worker  docker-compose.sandbox.yml  docker-compose.yaml  docker-compose.yml
ops/containers/: api.Dockerfile  postgres.Dockerfile  web.Dockerfile  worker.Dockerfile
ops/scripts/: __init__.py  fetch_cloudflare_tunnel_token.sh  generate_github_sample.py  generate_jira_sample.py  reset_sandbox.py
tests/: tests_github_client.py
tests/clients/: __init__.py  test_jira_client.py  tests_github_client.py
web/: Caddyfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
worker/: __init__.py  worker.py
(+25 files in other folders)
